--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ border: none;
 background-color: #ff9aff;
 box-shadow: 0 0 5px #ef97e8;
 
+
 }
 
 
@@ -100,7 +101,7 @@ border: none;
 padding: 10px 30px;
 border-radius: 5px;
 cursor: pointer;
-transition: background 0.3s;
+/* transition: background 0.3s; */
 text-align:center;
 padding: 20px 20px;
 display: inline-block;
@@ -132,7 +133,7 @@ box-shadow: 0 0 5px #ef97e8;
   padding: 10px 30px;
   border-radius: 5px;
   cursor: pointer;
-  transition: background 0.3s;
+  /* transition: background 0.3s; */
   text-align:center;
   padding: 20px 20px;
   display: inline-block;
@@ -325,10 +326,10 @@ body {
   height: 30px;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
-  -webkit-transition: right 3s, background 3s;
+  /* -webkit-transition: right 3s, background 3s;
   -moz-transition: right 3s, background 3s;
   -0-transition: right 3s, background 3s;
-  transition: right 3s, background 3s;
+  transition: right 3s, background 3s; */
   }
   
   .diffbar:hover .difflvl {
