--- a/style.css
+++ b/style.css
@@ -60,9 +60,34 @@ font-family:"karla";
 border: none;
 background-color: #ff9aff;
 box-shadow: 0 0 5px #ef97e8;
-
-
 }
+
+#installButton{
+  background: rgb(210, 131, 226);
+  color: #fff;
+  border: none;
+  padding: 10px 30px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background 0.3s;
+  text-align:center;
+  padding: 20px 20px;
+  display: inline-block;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  text-decoration: none;
+  overflow: hidden;
+  color: #111;
+  background: #ff95fa;
+  box-shadow: 0 0 50px #eb7ff5;
+  font-family:"karla";
+  border: none;
+  background-color: #ff9aff;
+  box-shadow: 0 0 5px #ef97e8;
+}
+
+
+
 
 
 #start-game:hover{
@@ -101,7 +126,7 @@ border: none;
 padding: 10px 30px;
 border-radius: 5px;
 cursor: pointer;
-/* transition: background 0.3s; */
+transition: background 0.3s;
 text-align:center;
 padding: 20px 20px;
 display: inline-block;
@@ -133,7 +158,7 @@ box-shadow: 0 0 5px #ef97e8;
   padding: 10px 30px;
   border-radius: 5px;
   cursor: pointer;
-  /* transition: background 0.3s; */
+  transition: background 0.3s;
   text-align:center;
   padding: 20px 20px;
   display: inline-block;
@@ -326,10 +351,10 @@ body {
   height: 30px;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
-  /* -webkit-transition: right 3s, background 3s;
+  -webkit-transition: right 3s, background 3s;
   -moz-transition: right 3s, background 3s;
   -0-transition: right 3s, background 3s;
-  transition: right 3s, background 3s; */
+  transition: right 3s, background 3s;
   }
   
   .diffbar:hover .difflvl {
